@@ -5,6 +5,7 @@ import com.intellij.idea.Main;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.SystemInfoRt;
+import com.intellij.util.lang.PathClassLoader;
 import com.intellij.util.lang.UrlClassLoader;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
@@ -13,12 +14,10 @@ import org.jetbrains.annotations.Nullable;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.UncheckedIOException;
 import java.net.ConnectException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.file.*;
-import java.security.ProtectionDomain;
 import java.util.*;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
@@ -37,24 +36,28 @@ public final class BootstrapClassLoaderUtil {
     return Logger.getInstance(BootstrapClassLoaderUtil.class);
   }
 
-  public static @NotNull UrlClassLoader initClassLoader() throws IOException {
-    Collection<Path> classpath = new LinkedHashSet<>();
-    Path distDir = Paths.get(PathManager.getHomePath());
+  public static @NotNull PathClassLoader initClassLoader() throws IOException {
+    Path distDir = Path.of(PathManager.getHomePath());
     if (Boolean.getBoolean("idea.use.dev.build.server")) {
-      try {
-        loadClassPathFromDevBuildServer(classpath);
+      ClassLoader classLoader = BootstrapClassLoaderUtil.class.getClassLoader();
+      if (!(classLoader instanceof PathClassLoader)) {
+        //noinspection SpellCheckingInspection,UseOfSystemOutOrSystemErr
+        System.err.println("Please run with VM option -Djava.system.class.loader=com.intellij.util.lang.PathClassLoader");
+        System.exit(1);
       }
-      catch (IOException e) {
-        throw new UncheckedIOException(e);
-      }
+
+      List<Path> paths = loadClassPathFromDevBuildServer(distDir);
+      PathClassLoader result = (PathClassLoader)classLoader;
+      result.getClassPath().appendFiles(paths);
+      return result;
     }
-    else {
-      parseClassPathString(System.getProperty("java.class.path"), classpath);
-      addIdeaLibraries(distDir, classpath);
-    }
+
+    Collection<Path> classpath = new LinkedHashSet<>();
+    parseClassPathString(System.getProperty("java.class.path"), classpath);
+    addIdeaLibraries(distDir, classpath);
     parseClassPathString(System.getProperty(PROPERTY_ADDITIONAL_CLASSPATH), classpath);
 
-    Path pluginDir = Paths.get(PathManager.getPluginsPath());
+    Path pluginDir = Path.of(PathManager.getPluginsPath());
     Path marketPlaceBootDir = pluginDir.resolve(MARKETPLACE_PLUGIN_DIR).resolve("lib/boot");
     Path mpBoot = marketPlaceBootDir.resolve("marketplace-bootstrap.jar");
     boolean installMarketplace = shouldInstallMarketplace(distDir, mpBoot);
@@ -77,17 +80,11 @@ public final class BootstrapClassLoaderUtil {
 
     if (installMarketplace) {
       try {
-        List<BytecodeTransformer> transformers = new ArrayList<>();
-        UrlClassLoader spiLoader = UrlClassLoader.build()
-          .files(Collections.singletonList(mpBoot))
-          .parent(BootstrapClassLoaderUtil.class.getClassLoader())
-          .get();
-        for (BytecodeTransformer transformer : ServiceLoader.load(BytecodeTransformer.class, spiLoader)) {
-          transformers.add(transformer);
-        }
-        if (!transformers.isEmpty()) {
-          return new TransformingLoader(builder, transformers);
-        }
+        PathClassLoader spiLoader = new PathClassLoader(UrlClassLoader.build()
+                                                          .files(Collections.singletonList(mpBoot))
+                                                          .parent(BootstrapClassLoaderUtil.class.getClassLoader()));
+        Iterator<BytecodeTransformer> transformers = ServiceLoader.load(BytecodeTransformer.class, spiLoader).iterator();
+        return new PathClassLoader(builder, transformers.hasNext() ? transformers.next() : null);
       }
       catch (Throwable e) {
         // at this point logging is not initialized yet, so reporting the error directly
@@ -97,10 +94,10 @@ public final class BootstrapClassLoaderUtil {
       }
     }
 
-    return builder.get();
+    return new PathClassLoader(builder);
   }
 
-  private static void loadClassPathFromDevBuildServer(@NotNull Collection<Path> classpath) throws IOException {
+  private static List<Path> loadClassPathFromDevBuildServer(@NotNull Path distDir) throws IOException {
     String platformPrefix = System.getProperty("idea.platform.prefix", "idea");
     URL serverUrl = new URL("http://127.0.0.1:20854/build?platformPrefix=" + platformPrefix);
     //noinspection UseOfSystemOutOrSystemErr
@@ -122,17 +119,17 @@ public final class BootstrapClassLoaderUtil {
       throw new RuntimeException("Dev Build server not able to handle build request, see server's log for details");
     }
 
-    Path excludedModuleListPath = Paths.get(PathManager.getHomePath(), "out/dev-run", platformPrefix, "libClassPath.txt");
+    List<Path> result = new ArrayList<>();
+    FileSystem fs = FileSystems.getDefault();
+    Path excludedModuleListPath = distDir.resolve("out/dev-run/" + platformPrefix + "/libClassPath.txt");
     try (Stream<String> lineStream = Files.lines(excludedModuleListPath)) {
       lineStream.forEach(s -> {
         if (!s.isEmpty()) {
-          classpath.add(Paths.get(s));
+          result.add(fs.getPath(s));
         }
       });
     }
-    catch (IOException e) {
-      throw new UncheckedIOException(e);
-    }
+    return result;
   }
 
   private static boolean shouldInstallMarketplace(@NotNull Path homePath, @NotNull Path mpBoot) {
@@ -242,36 +239,6 @@ public final class BootstrapClassLoaderUtil {
       }
     }
     return new ArrayList<>(classpath);
-  }
-
-  private static final class TransformingLoader extends UrlClassLoader {
-    private final List<BytecodeTransformer> myTransformers;
-
-    TransformingLoader(Builder builder, List<BytecodeTransformer> transformers) {
-      super(builder);
-      myTransformers = Collections.unmodifiableList(transformers);
-    }
-
-    @Override
-    protected Class<?> _defineClass(String name, byte[] b) {
-      return super._defineClass(name, doTransform(name, null, b));
-    }
-
-    @Override
-    protected Class<?> _defineClass(String name, byte[] b, @Nullable ProtectionDomain protectionDomain) {
-      return super._defineClass(name, doTransform(name, protectionDomain, b), protectionDomain);
-    }
-
-    private byte[] doTransform(String name, ProtectionDomain protectionDomain, byte[] bytes) {
-      byte[] b = bytes;
-      for (BytecodeTransformer transformer : myTransformers) {
-        byte[] result = transformer.transform(this, name, protectionDomain, b);
-        if (result != null) {
-          b = result;
-        }
-      }
-      return b;
-    }
   }
 
   private static final class SimpleVersion implements Comparable<SimpleVersion>{
